syntax = "proto3";

option csharp_namespace = "GreeterGrpcServices";

package greeterpackage;

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  
  // Health check for ALB
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {}
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// Health check request (empty)
message HealthCheckRequest {
}

// Health check response (empty)
message HealthCheckResponse {
}